--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.7.0.1746</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
