--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,6 @@
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
-    </properties>
+       <jenkins.e2eTests.reportsDirectory>target/protractor-reports</jenkins.e2eTests.reportsDirectory>
+   </properties>
 </project>
